--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "firebase": "^9.6.1",
     "next": "latest",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
+    "react-dom": "^17.0.2"
   }
 }
