--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,10 @@
   },
   "main": "index.js",
   "dependencies": {
+    "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "next": "^13.4.19"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
