--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "firebase": "^9.6.10",
     "firebase-admin": "^11.10.1",
     "firebase-functions": "^4.4.1",
-    "next": "latest",
-    "react": "^18.2.0",
+    "next": "^10.2.3",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.2",
     "react-qr-reader": "^3.0.0-beta-1"
   }
 }
