--- a/package.json
+++ b/package.json
@@ -7,15 +7,26 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.13",
+    "babel-loader": "^9.1.3",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.10",
     "firebase-admin": "^11.10.1",
     "firebase-functions": "^4.4.1",
     "next": "^10.2.3",
-    "react": "^17.0.2",
+    "pdfjs-dist": "^3.11.174",
+    "raw-loader": "^4.0.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.0.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
+    "react-pdf": "^7.5.0",
     "react-qr-barcode-scanner": "^1.0.6",
-    "react-qr-reader": "^3.0.0-beta-1"
+    "react-qr-reader": "^3.0.0-beta-1",
+    "webpack": "^5.89.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/preset-env": "^7.23.2"
   }
 }
