--- a/firebase.json
+++ b/firebase.json
@@ -2,9 +2,18 @@
   "hosting": {
     "public": "./out",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "cleanUrls": true,
     "rewrites": [
       {
-        "source": "**",
+        "source": "/_next/**",
+        "destination": "/_next/**"
+      },
+      {
+        "source": "/static/**",
+        "destination": "/static/**"
+      },
+      {
+        "source": "**/**",
         "destination": "/index.html"
       }
     ]
