--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider next dev",
     "build": "next build",
     "start": "next start",
     "export": "next build && next export"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.9",
+    "@fullcalendar/daygrid": "^6.1.9",
+    "@fullcalendar/react": "^6.1.9",
     "@react-pdf/renderer": "^3.1.13",
     "babel-loader": "^9.1.3",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.3.2",
+    "date-fns": "^2.30.0",
     "firebase": "^9.6.10",
     "firebase-admin": "^11.10.1",
     "firebase-functions": "^4.4.1",
+    "mdb-react-ui-kit": "^6.3.0",
     "next": "^10.2.3",
     "pdfjs-dist": "^3.11.174",
     "raw-loader": "^4.0.2",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.0.3",
-    "react-dom": "^18.2.0",
+    "react": "^16.14.0",
+    "react-bootstrap": "^2.9.1",
+    "react-dom": "^16.14.0",
     "react-pdf": "^7.5.0",
     "react-qr-barcode-scanner": "^1.0.6",
     "react-qr-reader": "^3.0.0-beta-1",
@@ -27,6 +32,7 @@
   "devDependencies": {
     "@babel/core": "^7.23.2",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "@babel/preset-env": "^7.23.2"
+    "@babel/preset-env": "^7.23.2",
+    "cross-env": "^7.0.3"
   }
 }
