--- a/package.json
+++ b/package.json
@@ -2,32 +2,41 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider next dev",
-    "build": "next build",
-    "start": "next start",
-    "export": "next build && next export"
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider next build",
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider next start",
+    "export": "cross-env NODE_OPTIONS=--openssl-legacy-provider next build && next export"
   },
   "dependencies": {
-    "@fullcalendar/core": "^6.1.9",
-    "@fullcalendar/daygrid": "^6.1.9",
-    "@fullcalendar/react": "^6.1.9",
-    "@react-pdf/renderer": "^3.1.13",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
+    "@react-pdf/renderer": "^3.3.8",
     "babel-loader": "^9.1.3",
-    "bootstrap": "^5.3.2",
-    "date-fns": "^2.30.0",
-    "firebase": "^9.6.10",
-    "firebase-admin": "^11.10.1",
-    "firebase-functions": "^4.4.1",
-    "mdb-react-ui-kit": "^6.3.0",
-    "next": "^10.2.3",
-    "pdfjs-dist": "^3.11.174",
+    "bootstrap": "^5.3.3",
+    "buffer": "^6.0.3",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
+    "dequal": "^2.0.3",
+    "firebase": "^10.8.0",
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^4.7.0",
+    "make-cancellable-promise": "^1.3.2",
+    "make-event-props": "^1.6.2",
+    "merge-refs": "^1.2.2",
+    "next": "^10.0.0",
+    "nodemailer": "^6.9.10",
+    "pdfjs-dist": "^4.0.379",
+    "prop-types": "^15.8.1",
     "raw-loader": "^4.0.2",
-    "react": "^16.14.0",
+    "react": "^16.13.1",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^16.14.0",
-    "react-pdf": "^7.5.0",
+    "react-dom": "^16.13.1",
+    "react-pdf": "^7.7.1",
     "react-qr-barcode-scanner": "^1.0.6",
     "react-qr-reader": "^3.0.0-beta-1",
-    "webpack": "^5.89.0"
+    "tiny-invariant": "^1.3.2",
+    "warning": "^4.0.3",
+    "webpack": "^5.90.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
