--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "export": "cross-env NODE_OPTIONS=--openssl-legacy-provider next build && next export"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@fullcalendar/core": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
     "@fullcalendar/react": "^6.1.11",
@@ -36,7 +37,8 @@
     "react-qr-reader": "^3.0.0-beta-1",
     "tiny-invariant": "^1.3.2",
     "warning": "^4.0.3",
-    "webpack": "^5.90.3"
+    "webpack": "^5.90.3",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
