i dont remember exactly what i did

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,9 @@
 {
   "projects": {
-    "default": "magmo-ac10c"
-  }
+    "default": "magmo-ac10c",
+    "magmo": "magmo-ac10c"
+  },
+  "targets": {},
+  "etags": {},
+  "dataconnectEmulatorConfig": {}
 }
