--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "./out",
+    "public": "out",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -17,7 +17,7 @@
         "destination": "/static/**"
       },
       {
-        "source": "**/**",
+        "source": "**",
         "destination": "/index.html"
       }
     ]
